# alt-cmp

./: Cargo.toml  README.md  package_mapping.txt
alt-parser/: Cargo.toml
alt-parser/src/: altlinux.rs  lib.rs  proxmox.rs
src/: cli.rs  main.rs  output.rs  utils.rs
