[package]
name = "alt-cmp"
version = "0.1.0"
edition = "2021"

[dependencies]
alt-parser = { path = "./alt-parser" }
clap = { version = "4.5", features = ["derive"] }
prettytable-rs = "0.10"
colored = "3.0.0"
indicatif = "0.17"
reqwest = { version = "0.12.12", features = ["blocking"] }
tokio = { version = "1.37", features = ["full"] }
xz2 = "0.1"
version-compare = "0.2"
